tests/frontend/fail/array/create_arg_array_atomic_mismatch.act
constructor of A
interface constructor(uint[2] y)


constructor of B
interface constructor()

creates
  A a := create A(3)
